Testing PatternService (WIP, all current tests pass)